[package]
name = "validation-ws"
version = "0.1.0"
authors = ["kunjee17"]
edition = "2021"
resolver = "2"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0", optional = true }
regex = "1"
anyhow = "1"
validator = { version = "0", features = ["card", "card-validate", "unic", "unic-ucd-common", "indexmap"] }


[dev-dependencies]
wasm-bindgen-test = "0"

[profile.release]
# less code to include into binary
panic = 'abort'
# optimization over all codebase ( better optimization, slower build )
codegen-units = 1
# optimization for size ( more aggressive )
opt-level = 'z'
# optimization for size
# opt-level = 's'
# link
